--- a/client/src/index.css
+++ b/client/src/index.css
@@ -12,6 +12,10 @@ code {
     monospace;
 }
 
+body {
+  background-image: url("https://res.cloudinary.com/djzhu5kfj/image/upload/v1633583604/Flatiron%20-%20Phase%204%20Project/Background_rtcyih.jpg");
+  /* background-size: cover; */
+}
 
 /* HERO CARDS */
 .heroes {
@@ -30,6 +34,9 @@ code {
   box-shadow: 0px 0px 15px -5px;
   transition: 0.3s;
   animation: ease-in;
+  background: rgb(10, 52, 167);
+  color: rgb(143, 144, 148);
+  border-radius: 25px;
 }
 
 .heroes-card:hover {
@@ -53,3 +60,5 @@ code {
   margin-left: 1rem;
   margin-bottom: .5rem;
 }
+
+/* NAVBAR */
