--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,4 @@
+/* GENERAL CSS */
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -17,6 +18,75 @@ body {
   /* background-size: cover; */
 }
 
+/* FORMS AND BUTTONS */
+.authForm {
+  width: 50%;
+  overflow: hidden;
+  box-shadow: 0px 0px 15px -5px;
+  margin: auto;
+  background: rgba(0, 67, 129, 0.61);
+  color: rgb(197, 197, 199);
+  margin-top: 10rem;
+}
+
+.inputArea {
+  background-color: rgba(0, 67, 129, 0.61);
+  padding: 5px 20px;
+  margin: 8px 0;
+  box-sizing: border-box;
+  outline: 0;
+  border-width: 0 0 2px;
+  border-color: rgb(136, 154, 168);
+}
+
+.inputArea:focus {
+  border-color: springgreen;
+}
+
+.inputArea, select, textarea {
+  color: rgb(43, 226, 104);
+}
+
+textarea:focus, .inputArea:focus {
+  color: blueviolet;
+}
+
+.butt {
+  display: inline-block;
+  padding: 0.3em 1.2em;
+  margin: 0 0.1em 0.1em 0;
+  border: 0.16em solid rgb(32, 42, 102);
+  background-color: rgb(0, 146, 231);
+  border-radius: 2em;
+  box-sizing: border-box;
+  text-decoration: none;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 300;
+  color: rgb(0, 255, 242);
+  text-shadow: 0 0.04em 0.04em slategray;
+  text-align: center;
+  transition: all 0.2s;
+}
+
+.butt:hover{
+  border-color: springgreen;
+}
+
+@media all and (max-width:30em){
+  .butt {
+    display:block;
+    margin: 0.2em auto;
+  }
+}
+
+#authButton {
+  background-image: url("https://c8.alamy.com/comp/2F2FNC0/fingerprint-biometric-scanner-against-microprocessor-connections-on-blue-background-2F2FNC0.jpg");
+  background-size: cover;
+  padding: 1em 1em;
+  color: rgb(0, 255, 221);
+  font-size: 110%;
+}
+
 /* HERO CARDS */
 .heroes {
   display: grid;
@@ -25,6 +95,7 @@ body {
   gap: 2rem;
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
   padding: 10px;
 }
 
@@ -34,14 +105,15 @@ body {
   box-shadow: 0px 0px 15px -5px;
   transition: 0.3s;
   animation: ease-in;
-  background: rgb(10, 52, 167);
-  color: rgb(143, 144, 148);
+  background: rgba(10, 52, 167, 0.521);
+  color: rgb(186, 187, 190);
   border-radius: 25px;
 }
 
 .heroes-card:hover {
   transform: scale(1.1);
   box-shadow: 0px 0px 15px 0px;
+  color: ;
 }
 
 .hero-wrapper {
@@ -62,3 +134,61 @@ body {
 }
 
 /* NAVBAR */
+
+
+/* HERODETAIL/INFO */
+.hero-details {
+  width: 90%;
+  overflow: hidden;
+  box-shadow: 0px 0px 15px -5px;
+  margin: auto;
+  background: rgba(0, 67, 129, 0.61);
+  color: rgb(197, 197, 199);
+}
+
+.vid {
+  width: 40%;
+}
+
+.sections {
+  display: flex;
+  flex-direction: row;
+}
+
+#pa-section {
+  width: 50%;
+  overflow: hidden;
+  box-shadow: 0px 0px 15px -5px;
+  margin: auto;
+  background: rgba(0, 67, 129, 0.61);
+  color: rgb(197, 197, 199);
+
+  display: inline-block;
+  vertical-align: text-top;
+  margin: 0 auto;
+}
+
+#ps-section {
+  width: 50%;
+  overflow: hidden;
+  box-shadow: 0px 0px 15px -5px;
+  margin: auto;
+  background: rgba(0, 67, 129, 0.61);
+  color: rgb(197, 197, 199);
+}
+
+#powerstat {
+  display: flex;
+  justify-content: center;
+}
+
+/* POWERSTATS */
+/* .category {
+  display: flex;
+  justify-content: left;
+} */
+
+.stats {
+  display: flex;
+  justify-content: center;
+} 
